# rag-demos

./: .gitignore  conda-rag-demo.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: main.py
app/models/: ChatOpenRouter.py
app/services/: rag_service.py
rag-guardrails-app/: Dockerfile  Dockerfile_evaluator  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
rag-guardrails-app/app/: asgi.py  evaluator_app.py  main.py  trial.ipynb
rag-guardrails-app/app/config/: config.yml  prompts.yml  settings.py
rag-guardrails-app/app/config/rails/: file_1.co  flows.co
rag-guardrails-app/app/data/: documents.json
rag-guardrails-app/app/models/: ChatOpenRouter.py  data_models.py
rag-guardrails-app/app/services/: document_indexer.py  document_loader.py  evaluator.py  guardrails.py  rag.py  rag_service.py
rag-guardrails-app/data/: documents.json  generate_index.py  vector_index.faiss
rag-guardrails-app/rag-guardrails-app/data/: documents.json  vector_index.faiss
rag-guardrails-app/tests/: conftest.py  test_document_indexer.py  test_document_loader.py  test_evaluator.py  test_integration_app.py  test_integration_rag_pipeline.py  test_main.py  test_rag.py  test_rag_service.py
tests/: conftest.py  test_evaluator.py  test_main.py
