[project]
name = "rag-guardrails-app"
version = "0.1.0"
description = "RAG Demos with robust evaluation and guardrails"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohttp",
    "fastapi",
    "faiss-cpu",
    "huggingface-hub",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langchain-huggingface",
    "nemoguardrails",
    "markdown",
    "numpy",
    "pandas",
    "pydantic",
    "python-dotenv",
    "ragas",
    "requests",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "starlette",
    "torch",
    "transformers",
    "pytest",
    "pytest-asyncio",
    "uvicorn",
    "langfuse",
    "nest-asyncio",
    "litellm",
    "unstructured",
    "aiofiles",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==6.1.1",
    "pytest-mock==3.12.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==7.2.0",
    "mypy==1.7.1",
    "types-requests==2.31.0.10",
    "types-PyYAML==6.0.12.12"
]

[tool.uv]
# uv will use this section for dependency resolution

[tool.pytest.ini_options]
addopts = "-ra -q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"] 
